syntax = "proto3";

package kvraftpb;

enum Op {
  Put = 0;
  Append = 1;
}

/// Put or Append
message PutAppendRequest {
  string key = 1;
  string value = 2;
  // "Put" or "Append"
  Op op = 3;
  // You'll have to add definitions here.
}

message PutAppendReply {
  bool wrong_leader = 1;
  string err = 2;
}

message GetRequest {
  string key = 1;
  // You'll have to add definitions here.
}

message GetReply {
  bool wrong_leader = 1;
  string value = 2;
}

message RaftRequest {
  oneof req {
    GetRequest get = 1;
    PutAppendRequest put = 2;
  }
}
